k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: 'nginx'
        nginx.ingress.kubernetes.io/use-regex: 'true'
        # ADD ANNOTATION
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        # UPDATE ANNOTATION
        certmanager.kubernetes.io/ssl-redirect: 'letsencrypt-prod'
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    tls:
        - hosts:
              - zaikedaar.com
              - www.zaikedaar.com
          secretName: zaikedaar-com
    rules:
        - host: zaikedaar.com
          http:
              paths:
                  - path: /?(.*)
                    # UPDATE PATH
                    pathType: Prefix
                    # ADD PATHTYPE
                    backend:
                        service:
                            # UPDATE SERVICE FIELDS
                            name: client-cluster-ip-service
                            port:
                                number: 3000
                  - path: /api/?(.*)
                    # UPDATE PATH
                    pathType: Prefix
                    # ADD PATHTYPE
                    backend:
                        service:
                            # UPDATE SERVICE FIELDS
                            name: server-cluster-ip-service
                            port:
                                number: 5000
        - host: www.zaikedaar.com
          http:
              paths:
                  - path: /?(.*)
                    # UPDATE PATH
                    pathType: Prefix
                    # ADD PATHTYPE
                    backend:
                        service:
                            # UPDATE SERVICE FIELDS
                            name: client-cluster-ip-service
                            port:
                                number: 3000
                  - path: /api/?(.*)
                    # UPDATE PATH
                    pathType: Prefix
                    # ADD PATHTYPE
                    backend:
                        service:
                            # UPDATE SERVICE FIELDS
                            name: server-cluster-ip-service
                            port:
                                number: 5000
